//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Cryptocurrency {
  id Int [pk, increment]
  name String [not null]
  price Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orders Order [not null]
  purchaseOrders PurchaseOrder [not null]
  userCryptocurrencys UserCryptocurrency [not null]
  transfers Transfer [not null]
  transactions Transaction [not null]
}

Table FiatCurrency {
  id Int [pk, increment]
  name String [not null]
  price Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  users User [not null]
}

Table User {
  id Int [pk, increment]
  email String [not null]
  password String [not null]
  firstName String [not null]
  lastName String [not null]
  balance Float [not null]
  fiatCurrencyId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  fiatCurrency FiatCurrency [not null]
  orders Order [not null]
  purchaseOrders PurchaseOrder [not null]
  userCryptocurrencys UserCryptocurrency [not null]
  fromTransfers Transfer [not null]
  toTransfers Transfer [not null]
}

Table UserCryptocurrency {
  id Int [pk, increment]
  amount Float [not null]
  userId Int [not null]
  cryptoId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  crypto Cryptocurrency [not null]
  user User [not null]
}

Table Order {
  id Int [pk, increment]
  status Status [not null]
  amount Float [not null]
  unitPrice Float [not null]
  cryptoId Int [not null]
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  crypto Cryptocurrency [not null]
  user User [not null]
  transactions Transaction [not null]
}

Table PurchaseOrder {
  id Int [pk, increment]
  status Status [not null]
  amount Float [not null]
  unitPrice Float [not null]
  cryptoId Int [not null]
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  crypto Cryptocurrency [not null]
  user User [not null]
  transactions Transaction [not null]
}

Table Transaction {
  id Int [pk, increment]
  amount Float [not null]
  unitPrice Float [not null]
  cryptoId Int [not null]
  purchaseId Int [not null]
  orderId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  crypto Cryptocurrency [not null]
  order Order [not null]
  purchaseOrder PurchaseOrder [not null]
}

Table Transfer {
  id Int [pk, increment]
  amount Float [not null]
  fromUserId Int [not null]
  toUserId Int [not null]
  cryptoId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  crypto Cryptocurrency [not null]
  fromUser User [not null]
  toUser User [not null]
}

Enum Status {
  COMPLETE
  PENDING
  CANCEL
}

Ref: User.fiatCurrencyId > FiatCurrency.id [delete: Cascade]

Ref: UserCryptocurrency.cryptoId > Cryptocurrency.id [delete: Cascade]

Ref: UserCryptocurrency.userId > User.id [delete: Cascade]

Ref: Order.cryptoId > Cryptocurrency.id [delete: Cascade]

Ref: Order.userId > User.id [delete: Cascade]

Ref: PurchaseOrder.cryptoId > Cryptocurrency.id [delete: Cascade]

Ref: PurchaseOrder.userId > User.id [delete: Cascade]

Ref: Transaction.cryptoId > Cryptocurrency.id [delete: Cascade]

Ref: Transaction.orderId > Order.id [delete: Cascade]

Ref: Transaction.purchaseId > PurchaseOrder.id [delete: Cascade]

Ref: Transfer.cryptoId > Cryptocurrency.id [delete: Cascade]

Ref: Transfer.fromUserId > User.id [delete: Cascade]

Ref: Transfer.toUserId > User.id [delete: Cascade]